# actix_newsletter_api

./: .env  .env.example  .gitignore  Cargo.toml  docker-compose.yml  start_docker_db  tdl
migrations/2022-07-05-234255_init_account/: up.sql
migrations/2022-07-05-234255_init_user/: up.sql
src/: domain.rs  email.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  telemetry.rs
